Commit on Oct/24/2020

--- a/storytelling.html
+++ b/storytelling.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Cache-Control" content="no-cache" />
 <meta http-equiv="CONTENT-TYPE" content="text/html; charset=utf-8" />
 <script src="/js/jquery-3.5.1.min.js"></script>
 <script src="storytelling.js"></script>
@@ -13,6 +11,7 @@
 <blockquote>
 <h2>ストーリーテリング</h2><p />
 </blockquote>
+<blockquote>
 <h2>味わう機会</h2>
 	<blockquote>
 	<div class="information"></div>
@@ -23,7 +22,7 @@
 	</blockquote>
 </blockquote>
 <hr />
-<a href="../">Return</a><p />
-Oct/23/2020 AM 07:00<p />
+<a href="../">Return</a><br /><br />
+Oct/24/2020 AM 07:00<br />
 </body>
 </html>
