Commit on Oct/24/2020

--- a/storytelling.html
+++ b/storytelling.html
@@ -9,14 +9,14 @@
 </head>
 <body>
 <blockquote>
-<h2>ストーリーテリング</h2><p />
+<h2>ストーリーテリング</h2>
 </blockquote>
 <blockquote>
 <h2>味わう機会</h2>
 	<blockquote>
 	<div class="information"></div>
 	</blockquote>
-<h2>私のレパートリー</h2><p />
+<h2>私のレパートリー</h2>
 	<blockquote>
 	<div class="contents"></div>
 	</blockquote>
