--- a/storytelling.html
+++ b/storytelling.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta http-equiv="CONTENT-TYPE" content="text/html; charset=utf-8" />
-<script src="/js/jquery-3.5.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="storytelling.js"></script>
 <link rel="stylesheet" href="storytelling.css">
 <title>ストーリーテリング</title>
@@ -23,6 +23,6 @@
 </blockquote>
 <hr />
 <a href="../">Return</a><br /><br />
-Dec/11/2020 AM 07:00<br />
+Jan/01/2021 AM 07:00<br />
 </body>
 </html>
