--- a/storytelling.html
+++ b/storytelling.html
@@ -2,6 +2,12 @@
 <html lang="ja">
 <head>
 <meta http-equiv="CONTENT-TYPE" content="text/html; charset=utf-8" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@ekzemplaro" />
+<meta property="og:url" content="https://corona.ekzemplaro.org/" />
+<meta property="og:title" content="コロナウイルス関連のページ" />
+<meta property="og:description" content="Covid19" />
+<meta property="og:image" content="https://ekzemplaro.org/png/linux_logo.png" />
 <title>ストーリーテリング</title>
 </head>
 <body>
@@ -20,7 +26,7 @@
 </blockquote>
 <hr />
 <a href="../">Return</a><br /><br />
-May/27/2021 AM 07:00<br />
+Jun/03/2021 AM 07:00<br />
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="storytelling.js"></script>
