Commit on Jun/03/2021

--- a/storytelling.html
+++ b/storytelling.html
@@ -5,8 +5,8 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@ekzemplaro" />
 <meta property="og:url" content="https://corona.ekzemplaro.org/" />
-<meta property="og:title" content="コロナウイルス関連のページ" />
-<meta property="og:description" content="Covid19" />
+<meta property="og:title" content="ストーリーテリングのページ" />
+<meta property="og:description" content="Storytelling" />
 <meta property="og:image" content="https://ekzemplaro.org/png/linux_logo.png" />
 <title>ストーリーテリング</title>
 </head>
