--- a/storytelling.html
+++ b/storytelling.html
@@ -4,7 +4,7 @@
 <meta http-equiv="CONTENT-TYPE" content="text/html; charset=utf-8" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@ekzemplaro" />
-<meta property="og:url" content="https://corona.ekzemplaro.org/" />
+<meta property="og:url" content="https://ekzemplaro.org/storytelling/" />
 <meta property="og:title" content="ストーリーテリングのページ" />
 <meta property="og:description" content="Storytelling" />
 <meta property="og:image" content="https://ekzemplaro.org/png/linux_logo.png" />
@@ -26,7 +26,7 @@
 </blockquote>
 <hr />
 <a href="../">Return</a><br /><br />
-Jun/03/2021 AM 07:00<br />
+Jun/07/2021 AM 07:00<br />
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="storytelling.js"></script>
