Commit on Aug/31/2021

--- a/storytelling.html
+++ b/storytelling.html
@@ -20,13 +20,30 @@
 	<div class="information"></div>
 	</blockquote>
 <h2>私のレパートリー</h2>
+<div id="mode">
+<input type="radio" name="order" value="register" checked>登録順
+<input type="radio" name="order" value="told">語り順
+
+</div>
 	<blockquote>
 	<div class="contents"></div>
 	</blockquote>
 </blockquote>
 <hr />
+<!--
+<hr />
+<div id="outarea_aa">outarea_aa</div>
+<div id="outarea_bb">outarea_bb</div>
+<div id="outarea_cc">outarea_cc</div>
+<div id="outarea_dd">outarea_dd</div>
+<div id="outarea_ee">outarea_ee</div>
+<div id="outarea_ff">outarea_ff</div>
+<div id="outarea_gg">outarea_gg</div>
+<div id="outarea_hh">outarea_hh</div>
+<hr />
+-->
 <a href="../">Return</a><br /><br />
-Aug/19/2021 AM 07:00<br />
+Aug/31/2021 AM 07:00<br />
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="storytelling.js"></script>
